manager/templates/a11y/sass/index.scss
//@import "bourbon/bourbon";
@import "_bourbon-fix.scss";

$border-box-sizing:false;
@import "neat/neat";
$fa-css-prefix:       icon;
@import "font-awesome/font-awesome";
.#{$fa-css-prefix}-large { @extend .#{$fa-css-prefix}-lg; }
@import "image-set";
@import "colors-and-vars";
@import "utility";
@import "xtheme-modx";
@import "components/components";
@import "buttons";
@import "forms";
@import "tabs";
@import "navbar";
@import "uberbar";
@import "dashboard";
@import "breadcrumbs";
@import "toolbars";
@import "tree";
@import "browser";
@import "windows";
@import "help";
 
/*

	Diagram
	
	A. _colors-and-vars.scss	|	$mainBg
	B. _colors-and-vars.scss	|	$navbarBg
	C. _colors-and-vars.scss	|	$tabBg
	D. _colors-and-vars.scss	|	$resourcePanelIcons
	E. _colors-and-vars.scss	|	$treeText
	
	=============================================================================================================
	commonly changed elements
	
	Bright Blue Accent	| $colorSplash
	
	Navbar				| _navbar.scss	| #modx-navbar
	Left Bar Tabs 		| _tabs.scss 	| .x-tab-strip li
	Left Bar Tabs BG	| _tabs.scss	| .x-tab-panel-header ul.x-tab-strip-top or $tabStripBg
	Active Tab Color 	| _tabs.scss 	| .x-tab-strip-active
	Action (Save) Btns 	| _buttons.scss	| line 65ish  -  #modx-action-buttons & 
	Page Header H2		| index			| below under Typography
	
	
*/

body *:focus {@extend %a11y-outline;}
#modx-header *:focus, #modx-leftbar *:focus, #modx-leftbar a:focus, .x-panel-body *:focus, -webkit-tap-highlight-color, .x-btn-focus:focus 
{@extend %a11y-outline;}

body, body.x-border-layout-ct {
  color: $mainText;
  //font:  $baseText;
  font-family: "Helvetica Neue", Helvetica, arial, tahoma, sans-serif;
  font-size: 1em;
  -webkit-font-smoothing: antialiased;

  a {
    color: #3175b5;

    &:hover {
      color: #184671;
    }
  }
}

//hide new resource button & refresh button that dont work
#extdd-1_tools, #extdd-19_tools{display: none;}

//new - Create New Resource Link
#aria-new-doc{
	padding: 4px;
	display: block;
}

#modx-uberbar-label{
	position: absolute;
	left: -10000px;
}

#modx-container {
  height: 100%;
  width: 100%;
  background: $mainBg; 
}

hr {
  background-color: $desaturatedSplash;
  border: 0;
  color: $midsky;
  height: 1px;
  margin: 20px;
}

.padding {
  background-color: $white;
  padding: 11px;
}

.dashed {
  border-bottom: 1px $desaturatedSplash dashed;
}

.x-form-text, textarea.x-form-field {
	border-color:$borderColor;
}

/* 
	div/table headings
*/
	

.x-grid3-header {
  background: $softligthBlue;
  border-bottom: 1px solid $darkNeutral;
  padding: 0;
}


/* 
	typography
*/

h1, h2, h3 {
  color:  $headerText;
  //font:   $fontH2;
  font-size: 2em;
  margin: 0 0 8px 5px;
}
h3 {
  //font: $fontH3;
  font-size: 1em;
}

#modx-template-header{margin-bottom: 25px;}

strong {
  font-weight: bold;
}

em {
  font-style: italic;
}

.aleft {
  text-align: left;
}

.aright {
  text-align: right;
}

.right {
  float: right;
}

.left {
  float: left;
}

.clear {
  clear: left;
}

.bold {
  font-weight: bold;
}

.not-installed {
  color: $red;
}

.red {
  color: $red !important;
}

.green {
  color: $green !important;
}

.primary {
	color:$primaryAction !important;
}

.error {
  color: $red !important;
}

.centered {
  text-align: center;
}

.wait {
  background: transparent url($imgPath + 'style/wait.gif') no-repeat scroll center 55px;
  color: $darkNeutral;
  font-size: 15px;
  font-weight: bold;
  padding: 20px 10px 60px;
}


/* 
	panel setups 
*/

#modx-leftbar,
#modx-content,
#modx-footer {
  position: absolute;
}

#modx-content{top: 0 !important; left: 310px !important;}
#modx-leftbar{
	background: $tabBg;
	top: 0 !important;
	height: 100%;
}

.modx-form p {
  padding-bottom: 10px;
}

.x-layout-mini {
  left: 2px;
}

/*
#modx-resource-tabs {
  margin: 20px 0 0;
  @extend %shaded-tab-box;
  .x-tab-panel-header {
    width:auto !important; 
    &.vertical-tabs-header {
      width:150px !important; 
    }
    .x-tab-strip {
      li {
        float:left;
        //width:auto;
        margin-left:0;
      }
    }
  }
  #modx-tv-tabs {
      border-left:0;
      border-right:0;
  }
}

#modx-resource-tvs-div #modx-tv-tabs, #modx-resource-tabs #modx-tv-tabs {
	.x-tab-strip {
		margin-top:12px;
		li {
			width:100% !important; 
			margin-left:0;
			border-bottom:1px solid $borderColor;
			&:nth-last-child(3) { border-color:transparent }
			&.x-tab-strip-active { border-bottom:1px solid $borderColor; }
		}
	}
}
*/

/* firefox needs this badly or the content is pushed to the right */
#ext-gen18{clear:left;}

#modx-resource-content {
  background-color: $rscDetailsBg;
  
  .x-panel-header {
      margin:0;
      padding: 15px;
  }
  .x-panel-bwrap {
      border:0;
  }
}

#modx-content-above, #modx-content-below {
	.x-panel-bwrap {
		border:0;
	}
}

.x-tab-panel-header {
	@include box-sizing(border-box);
	margin-top: 2px;
	.x-tab-strip {
		li {
			@include box-sizing(border-box);
		}
	}
}

.x-window-footer {
	.x-toolbar-right-row {
		td {
			&:last-of-type {
				.x-btn {
					@include linear-gradient(lighten($primaryAction,10%), $primaryAction);
					border-color:darken($primaryAction,6%);
					button {
						color:$white;
					}
				}
				.x-btn-over {
					border-color:darken($primaryAction,10%);
					@include linear-gradient(lighten($primaryAction,16%), $primaryAction);
				}
			}
		}
	}
}



/* 
	Grids 
*/
.x-small-editor .x-form-field {
  font-size: 12px !important;
}

.grid-row-inactive {
  color: #999 !important;
}

a.x-grid-link{ color:$mainText; text-decoration: none; }
a.x-grid-link:hover, a.x-grid-link:focus{ text-decoration: underline; }


/* panel stylings */
.modx-page-header, .modx-page-header div {
  background-color: transparent !important;
}

#modx-content form.x-panel-body {
  background-color: transparent !important;
}

#modx-mainpanel {
  height: 100%;
  position: relative;
}

/* 
	News Articles 
*/

.news_article {
  border-bottom: 1px solid $borderColor;
  padding: 10px 0 33px;
}
/* ... */

